# maimai.py

./: .env.example  .gitignore  CHANGELOG.md  DISCLAIMER.md  README.md  README_CN.md  README_EN.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: api-deploy.yml  api-docs.yml  deploy.yml  docs.yml  pypi-deploy.yml  releases.yml  tests.yml  vp-docs.yml
docs/: changelog.md  client.md  examples.md  get-started.md  index.md  package-lock.json  package.json  swagger.html
docs/.vitepress/: config.mts
docs/concepts/: caches.md  client.md  examples.md  models.md
docs/dev/: participation.md  samples.md
docs/modules/: areas.md  caches.md  concepts.md  items.md  models.md  plates.md  players.md  regions.md  scores.md  songs.md
docs/modules_old/: concepts.md  plates.md  players.md  songs.md
docs/providers/: arcade.md  divingfish.md  hybrid.md  local.md  lxns.md  wechat.md
docs/samples/: proxy_updater.md  simple_prober.md
docs/zh/: client.md  examples.md  get-started.md  index.md
examples/: .env.example  pyproject.toml
examples/proxy_updater/: config.py  main.py  proxy.py  requirements.txt  updater.py
maimai_py/: __init__.py  api.py  caches.py  enums.py  exceptions.py  maimai.py  models.py  providers.py  utils.py
maimai_py/providers/: __init__.py  arcade.py  base.py  divingfish.py  hybrid.py  lxns.py  wechat.py  yuzu.py
tests/: conftest.py  main.py  test_arcade.py  test_areas.py  test_cache.py  test_chain.py  test_client.py  test_items.py  test_maimai.py  test_players.py  test_scores.py  test_songs.py
(+32 files in other folders)
