[tool.poetry]
name = "maimai-py-examples"
version = "1.0.0"
description = "The definitive python wrapper for MaimaiCN."
authors = ["Usagi no Niku <chenbohan911@163.com>"]
license = "MIT"
packages = [{include = "proxy_updater"}]

[tool.poetry.dependencies]
python = "^3.12"
maimai-py = "^1.3.1"
mitmproxy = "^12.1.1"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
